@@ -21,7 +21,7 @@ CLASSPATH=""
 DEBUG="false"
 DEBUG_OPTS="-agentlib:jdwp=transport=dt_socket,address=9009,server=y,suspend=n"
 JAVA_BIN="$(which java)"
-JAVA_OPTS="-Xmx2048m -XX:MaxPermSize=384m"
+JAVA_OPTS="-Xmx2560m -XX:MaxNewSize=1536m -XX:MaxMetaspaceSize=768m -XX:MetaspaceSize=768m -XX:NewSize=1536m -XX:SurvivorRatio=7"
 STD_IN=0
 
 key=""
@@ -63,7 +63,7 @@ fi
 
 CURRENT_IFS="${IFS}"
 
-IFS="," 
+IFS=","
 for path in ${CLASSPATH}
 do
 	exportJars ${path}
